<resources>
    <string name="app_name">CardioMood 2.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">HRV Expert by CardioMood</string>
    <string name="dummy_button">Tap to skip</string>
    <string name="dummy_content">CardioMood.Com</string>
    <string name="title_activity_main">CardioMood</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">New Session</string>
    <string name="title_section3">History</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="menu_log_out">Log out</string>
    <string name="connect">Connect...</string>
    <string name="refreshing">Refreshing...</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="your_profile">Personal Info</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth date</string>
    <string name="your_weight">Weight (kg))</string>
    <string name="save">Save</string>
    <string name="title_activity_session_details">Measurement</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="device_was_disconnected">Not enough data were collected due to device disconnection.</string>
    <string name="please_wait">Please wait...</string>
    <string name="saving_data">Saving data..</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="preparing_report">Preparing report...</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_rename">Rename...</string>
    <string name="stop">Stop</string>
    <string name="menu_bt_settings">Bluetooth Settings...</string>
    <string name="dafault_measurement_name">Measurement</string>
    <string name="item_removed">Item has been removed.</string>
    <string name="undo_deletion">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="swipe_again_to_remove">Swipe to remove</string>
    <string name="nothing_to_view">Nothing to view.</string>
    <string name="session_doesnt_exist">Session #{0} doesn\'t exist.</string>
    <string name="session_renamed">Session has been renamed</string>
    <string name="type_new_name">Specify name for this measurement:</string>
    <string name="rename_session">Rename</string>
    <string name="failed_to_romove_session">Failed to remove item. Try refreshing data.</string>
    <string name="profile_saved_locally">Profile has been saved locally.</string>
    <string name="unsupported_operation">Unsupported operation</string>
    <string name="select_device_to_connect">Select your Polar H7</string>
    <string name="pair_and_tap_connect">Pair your phone with Polar H7 heart rate monitor and tap Connect Device to start.</string>
    <string name="menu_about">About CardioMood</string>
    <string name="menu_about_condensed">About...</string>
    <string name="about_dialog_title">About CardioMood...</string>
    <string name="monitoring_is_in_progress">Viewing results is not allowed when connected to the heart rate monitor.</string>
    <string name="press_back_to_close">Tap BACK again to close this app.</string>
    <string name="opening_measurement">Wait a few seconds for the report generation.</string>
    <string name="connect_device">Connect device</string>
    <string name="loading_data_for_measurement">Loading data for measurement #</string>
    <string name="good_session_name">Ideal results</string>
    <string name="stressed_session_name">Example of stress</string>
    <string name="athlete_session_name">Athlete at rest</string>
    <string name="bad_session_name">Bad results example</string>
    <string name="cannot_delete_predefined_data">Predefined data cannot be deleted.</string>
    <string name="failed_to_save_file">Failed to save file</string>
    <string name="menu_save_as_image">Save as image</string>
    <string name="menu_save_as_image_short">Save picture</string>
    <string name="title_other_devices">Other devices</string>
    <string name="whats_new_dialog_title">What\'s New</string>
    <string name="menu_save_as">Save as...</string>
    <string name="item_save_as_image">Save as PNG image</string>
    <string name="item_save_as_text">Save to text file</string>
    <string name="failed_to_save_image">Failed to save image.</string>
    <string name="save_as_dlg_title">Save as...</string>
    <string name="menu_save_as_short">Save...</string>
    <string name="measurement_saved_notification_title">CardioMood: Saved to image.</string>
    <string name="measurement_saved_notification_text">Measurement has been saved to image. Tap to open.</string>
    <string name="network_settings_title">Network Settings</string>
    <string name="measurement_settings_title">Measurement Settings</string>
    <string name="title_settings_unlimited_measurement_length">Unlimited length (experimental)</string>
    <string name="summary_settings_protocol">Specify service protocol (http, https, ...)</string>
    <string name="title_settings_protocol">Protocol</string>
    <string name="title_settings_host_name">Host name</string>
    <string name="summary_settings_host_name">Specify host name of remote service</string>
    <string name="summary_settings_port_number">Specify port number of remote service (default is 80)</string>
    <string name="title_settings_port_number">Port Number</string>
    <string name="title_settings_service_path">Web-service Endpoind path</string>
    <string name="summary_settings_service_path">Specify relative path to the service root</string>
    <string name="summary_settings_unlimited_measurement_length">Check this to disable the measurement limit</string>
    <string name="title_activity_settings">CardioMood Settings</string>
    <string name="connection_settings_title">Connection Settings</string>
    <string name="title_settings_disable_bluetooth_on_close">Disable Bluetooth on close</string>
    <string name="summary_disable_bluetooth_on_close">Check this if you want the app to automatically disable bluetooth on exit</string>
    <string name="menu_feedback">Leave feedback</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="menu_action_send_feedback">Submit</string>
    <string name="feedback_has_been_submitted">Thank you! Your feedback has been successfully submitted.</string>
    <string name="feedback_submission_failed">Failed to submit feedback. Try again later.</string>
    <string name="submitting_feedback_message">Submitting your feedback. Please, wait...</string>
    <string name="menu_feedback_condensed">Rate</string>
                    <string name="title_activity_session_details_activity2">Session Details</string>
    <string name="title_activity_session_details2">SessionDetails2Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_monitoring">Monitoring</string>
    <string name="open_monitor">Open monitor</string>
    <string name="device_connected_open_monitor">The device is connected.</string>
    <string name="monitoring_title_heart_rate">Heart Rate</string>
    <string name="monitoring_title_stress">Stress Index</string>
    <string name="auto_start_measurement">Start measurement immediately</string>
    <string name="monitoring_title_spectrum">Frequency</string>
    <string name="login_progress_signing_in">Contacting CardioMood data server...</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Create Free CardioMood account</string>
    <string name="guest_login">Try offline</string>
    <string name="error_field_required">Field value required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="press_back_to_close_app">Tap BACK again to exit the app</string>
    <string name="sync">Synchronize with server</string>
    <string name="sync_condensed">Sync</string>
    <string name="this_feature_will_be_available_soon">This feature will be available soon.</string>
    <string name="disclaimer_text">In order to provide our services,  CardioMood may need to process your private data behind the scenes.\nYour private data will never be shown or disclosed to any third party without your permission or explicit request.</string>
    <string name="progress_sending_data">Sending data...</string>
    <string name="progress_receiving_data">Receiving data...</string>
    <string name="hint_count_limit">Heart beats limit</string>
    <string name="hint_time_limit">Time limit (seconds)</string>
    <string name="specify_your_custom_limit">Specify your custom limit:</string>
    <string name="time_limit">Time limit:</string>
    <string name="measurement_options">Measurement options:</string>
    <string name="heart_beats_collected">Heart Beats</string>
    <string name="time_elapsed">Time elapsed</string>
    <string name="you_can_report_a_bug_or">You can also report a bug or send us a feature request.</string>
    <string name="please_rate_our_app">Please, rate our app:</string>
    <string name="progress_loading">Loading...</string>
    <string name="menu_stop_measurement">Stop measurement</string>
    <string name="menu_start_measurement">Start measurement</string>
    <string name="menu_stop_measurement_condensed">Stop</string>
    <string name="menu_start_measurement_condensed">Start</string>
    <string name="spectrum_chart_description">Spectral power graph shows the ratio between activities of sympathetic (VLF and LF) and parasympathetic (HF) nervous systems.</string>
    <string name="historgam_description">Histogram shows the distribution of R-R intervals by various interval ranges. Wider histogram corresponds to a higher HRV.</string>
    <string name="scatterogram_description">Scattergram is a graphical representation of R-R intervals distribution (current is on X and previous is on Y).\nPoints at scattergram can be visually combined into an ellipse.</string>
    <string name="title_activity_report_preview">Report file</string>
    <string name="general_settings_title">General Settings</string>
    <string name="title_settings_disable_splash_screen">Disable splash screen</string>
    <string name="summary_disable_splash_screen">Do not show splash screen on start</string>
    <string name="title_settings_preferred_measurement_system">Preferred unit system</string>
    <string name="button_submit">Submit to CardioMood</string>
    <string name="button_open_google_play">Rate on Google Play...</string>
    <string name="title_settings_log_gps_data">Enable GPS tracking</string>
    <string name="summary_log_gps_data">Log your current location and speed while training.</string>
    <string name="title_settings_last_device_battery_level">Last device battery level</string>
    <string name="data_service_settings_title">Data Service Settings</string>
    <string name="title_settings_sync_strategy">Data synchronization strategy</string>
    <string name="title_settings_sync_disable_real_time">Disable real time upload</string>
    <string name="summary_sync_disable_real_time">Do not send data in real time</string>
    <string name="menu_change_password">Change Password...</string>
    <string name="title_settings_auto_reconnect">Auto reconnect</string>
    <string name="summary_settings_auto_reconnect">Attempt to reconnect when connection with heart rate monitor is lost.</string>
</resources>