<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings_title">
        <CheckBoxPreference
            android:key="app.disable_splash_screen"
            android:title="@string/title_settings_disable_splash_screen"
            android:summary="@string/summary_disable_splash_screen" />
        <ListPreference
            android:key="app.preferred_measurement_system"
            android:title="@string/title_settings_preferred_measurement_system"
            android:entries="@array/measurement_system_titles"
            android:entryValues="@array/measurement_system_values"
            android:defaultValue="METRIC"/>
        <CheckBoxPreference
            android:key="data.gps.collect_gps_location"
            android:title="@string/title_settings_log_gps_data"
            android:summary="@string/summary_log_gps_data"
            android:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/data_service_settings_title">
        <ListPreference
            android:key="sync.strategy"
            android:title="@string/title_settings_sync_strategy"
            android:entries="@array/sync_strategy_titles"
            android:entryValues="@array/sync_strategy_values"
            android:defaultValue="SYNC_WHEN_MODIFIED" />
        <CheckBoxPreference
            android:key="sync.disable_real_time"
            android:title="@string/title_settings_sync_disable_real_time"
            android:summary="@string/summary_sync_disable_real_time"
            android:defaultValue="true"
            android:enabled="false"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/connection_settings_title">
        <CheckBoxPreference
            android:key="connection.disable_bluetooth_on_close"
            android:title="@string/title_settings_disable_bluetooth_on_close"
            android:summary="@string/summary_disable_bluetooth_on_close" />
        <CheckBoxPreference
            android:key="connection.auto_reconnect"
            android:title="@string/title_settings_auto_reconnect"
            android:summary="@string/summary_settings_auto_reconnect"
            android:defaultValue="false"/>
        <Preference
            android:key="device.last_device_battery_level"
            android:title="@string/title_settings_last_device_battery_level"
            android:summary="N/A"
        />
    </PreferenceCategory>

</PreferenceScreen>