<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:cardiomood="http://schemas.android.com/apk/res-auto">
    <item cardiomood:showAsAction="always"
        android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:visible="false" />
    <item android:id="@+id/menu_bpm"
        cardiomood:showAsAction="always"
        android:title="-"
        android:visible="false" />
    <item cardiomood:showAsAction="ifRoom"
        android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback"
        android:icon="@drawable/ic_action_important"
        android:titleCondensed="@string/menu_feedback_condensed"/>
    <item cardiomood:showAsAction="never"
        android:id="@+id/menu_change_password"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_change_password" />
    <item cardiomood:showAsAction="ifRoom"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings" />
    <item cardiomood:showAsAction="ifRoom"
        android:id="@+id/menu_bt_settings"
        android:icon="@drawable/ic_action_bluetooth"
        android:title="@string/menu_bt_settings" />
    <item cardiomood:showAsAction="ifRoom"
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/menu_about"
        android:titleCondensed="@string/menu_about_condensed"/>
    <item cardiomood:showAsAction="never"
        android:id="@+id/menu_logout"
        android:title="@string/menu_log_out"/>
</menu>